--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -31,11 +31,11 @@
                 <a href="#" class="btn btn-warning">Login</a>
 
                 <a href="{% url 'cart' %}">
-                    <img id="card-icon" src="{% static 'images/cart.png' %}">
+                    <img id="cart-icon" src="{% static 'images/cart.png' %}">
                 </a>
                 <p id="cart-total">0</p>
             </div>
-
+            +
         </div>
     </nav>
     <!-- navbar end here -->
