--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -30,23 +30,22 @@
                 <div style="flex: 1"><strong>Total</strong></div>
             </div>
 
+            {% for item in items %}
             <div class="cart-row">
-                <div style="flex: 2"><img class="row-image" src="{% static 'images/placeholder.png' %}" alt="placeholder"></div>
-                <div style="flex: 2"><strong>Product 1</strong></div>
-                <div style="flex: 1"><strong>200</strong></div>
+                <div style="flex: 2"><img class="row-image" src="{{item.product.imageURL}}" alt="placeholder"></div>
+                <div style="flex: 2"><strong>{{item.product.name}}</strong></div>
+                <div style="flex: 1"><strong>Rs{{item.product.price|floatformat:2}}</strong></div>
                 <div style="flex: 1">
-                    <p class="quantity">2</p>
+                    <p class="quantity">{{item.quantity}}</p>
                     <div class="quantity">
                         <img class="chg-quantity" src="{% static 'images/arrow-up.png' %}" alt="">
 
                         <img class="chg-quantity" src="{% static 'images/arrow-down.png' %}" alt="">
                     </div>
                 </div>
-                <div style="flex: 1">
-                    <p>350</p>
-                </div>
+                <div style="flex: 1">Rs {{item.get_total}}</div>
             </div>
-
+            {% endfor %}
         </div>
     </div>
 </div>
