Updated views, database, templates

--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -47,20 +47,22 @@
             <a class="btn btn-outline-dark" href="{% url 'cart' %}">&#x2190; Back to Cart</a>
             <hr>
             <h3>Order Summary</h3>
-            <hr>
+            <hr> {% for item in items %}
             <div class="cart-row">
-                <div style="flex:2"><img class="row-image" src="{% static 'images/placeholder.png' %}" alt="placeholder"></div>
+                <div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}" alt="placeholder"></div>
                 <div style="flex:2">
-                    <p>Product 1</p>
+                    <p>{{item.product.name}}</p>
                 </div>
-                <div style="flex:2">
-                    <p>200</p>
+                <div style="flex:1">
+                    <p>Rs {{item.product.price}}</p>
                 </div>
-                <div style="flex:2">
-                    <p>x2</p>
+                <div style="flex:1">
+                    <p>{{item.quantity}}</p>
                 </div>
-                <h5>Items: 2</h5>
-                <h5>Total: 400</h5>
+                {% endfor %}
+
+                <h5>Items: {{order.get_cart_items}}</h5>
+                <h5>Total:Rs {{order.get_cart_total | floatformat:2}}</h5>
             </div>
         </div>
     </div>
