--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -36,6 +36,7 @@
                 <input id="form-buttom" class="btn btn-success btn-block" type="submit" value="Continue">
             </form>
         </div>
+
         <br>
         <div class="box-element hidden" id="payment-info">
             <small>Paypal Options</small>
@@ -49,7 +50,7 @@
             <h3>Order Summary</h3>
             <hr> {% for item in items %}
             <div class="cart-row">
-                <div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}" alt="placeholder"></div>
+                <div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
                 <div style="flex:2">
                     <p>{{item.product.name}}</p>
                 </div>
@@ -57,7 +58,7 @@
                     <p>Rs {{item.product.price}}</p>
                 </div>
                 <div style="flex:1">
-                    <p>{{item.quantity}}</p>
+                    <p>x{{item.quantity}}</p>
                 </div>
                 {% endfor %}
 
