--- a/static/css/main.css
+++ b/static/css/main.css
@@ -73,8 +73,8 @@ h6 {
 }
 
 .cart-row {
-    display: flex;
-    align-items: flex-stretch;
+    display: flex!important;
+    align-items: flex-stretch!important;
     padding-bottom: 10px;
     margin-bottom: 10px;
     border-bottom: 1px solid #ececec;
