--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <link rel="stylesheet" type="text/css" href=" {% static 'css/main.css' %} ">
+    <script type="text/javascript">
+        var user ='{{request.user}}'
+    </script>
 </head>
 
 <body>
@@ -44,7 +47,14 @@
         <br> {% block content %} {% endblock content %}
     </div>
 
-
+    <!-- my javascript -->
+    <script type="text/javascript" src="{% static 'js/cart.js' %}">
+        var user = {
+            {
+                'request.user'
+            }
+        }
+    </script>
     <!-- JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
