--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -38,12 +38,12 @@
                 <div style="flex: 1">
                     <p class="quantity">{{item.quantity}}</p>
                     <div class="quantity">
-                        <img class="chg-quantity" src="{% static 'images/arrow-up.png' %}" alt="">
+                        <img data-product="{{item.product.id}}" data-action="add" class="chg-quantity update-cart" src="{% static 'images/arrow-up.png' %} " alt="up-arrow">
 
-                        <img class="chg-quantity" src="{% static 'images/arrow-down.png' %}" alt="">
+                        <img data-product=" {{item.product.id}} " data-action="remove " class="chg-quantity update-cart " src="{% static 'images/arrow-down.png' %} " alt="down-arrow">
                     </div>
                 </div>
-                <div style="flex: 1">Rs {{item.get_total}}</div>
+                <div style="flex: 1 ">Rs {{item.get_total}}</div>
             </div>
             {% endfor %}
         </div>
