--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -48,14 +48,19 @@
             <a class="btn btn-outline-dark" href="{% url 'cart' %}">&#x2190; Back to Cart</a>
             <hr>
             <h3>Order Summary</h3>
-            <hr> 
-            {% for item in items %}
+            <hr> {% for item in items %}
             <div class="cart-row">
                 <div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
-                <div style="flex:2"><p>{{item.product.name}}</p></div>
-                <div style="flex:1"><p>Rs {{item.product.price}}</p></div>
-                <div style="flex:1"><p>x{{item.quantity}}</p></div>
-            {% endfor %}
+                <div style="flex:2">
+                    <p>{{item.product.name}}</p>
+                </div>
+                <div style="flex:1">
+                    <p>Rs {{item.product.price}}</p>
+                </div>
+                <div style="flex:1">
+                    <p>x{{item.quantity}}</p>
+                </div>
+                {% endfor %}
 
                 <h5>Items: {{order.get_cart_items}}</h5>
                 <h5>Total:Rs {{order.get_cart_total | floatformat:2}}</h5>
@@ -63,4 +68,12 @@
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+    var shipping = '{{order.shipping}}'
+
+    if (shipping == 'False') {
+        document.getElementById('shipping-info').innerHTML = ''
+    }
+</script>
 {% endblock content %}
