--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -33,13 +33,14 @@
                     </div>
                 </div>
                 <hr>
-                <input id="form-buttom" class="btn btn-success btn-block" type="submit" value="Continue">
+                <input id="form-button" class="btn btn-success btn-block" type="submit" value="Continue">
             </form>
         </div>
 
         <br>
         <div class="box-element hidden" id="payment-info">
             <small>Paypal Options</small>
+            <button id="make-payment">Make Payment</button>
         </div>
     </div>
 
@@ -75,5 +76,14 @@
     if (shipping == 'False') {
         document.getElementById('shipping-info').innerHTML = ''
     }
+
+    var form = document.getElementById('form')
+
+    form.addEventListener('submit', function(e) {
+        e.preventDefault()
+        console.log('Form Submitted...')
+        document.getElementById('form-button').classList.add("hidden");
+        document.getElementById('payment-info').classList.remove("hidden");
+    })
 </script>
 {% endblock content %}
